unpackaged/main/default/objects/Account/fields/ETSALES_Type__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Petrol And Gas</fullName>
            </value>
            <value>
                <fullName>Trading And Commercial</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Model School</fullName>
            </value>
            <value>
                <fullName>Ministry And Government</fullName>
            </value>
            <value>
                <fullName>Hotel,Restaurant,Catering,Tourism,Travel</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Contracting And Decoration</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government Corporation</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Social Support Authority</fullName>
            </value>
            <value>
                <fullName>SUNDRY PARTIES – ET Staff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>