unpackaged/main/default/objects/Account/fields/ETSALES_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zone A</fullName>
            </value>
            <value>
                <fullName>Zone B</fullName>
            </value>
            <value>
                <fullName>Zone C</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>