unpackaged/main/default/objects/Account/fields/ETST_Academic_Year_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Academic_Year_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic Year Start Date</label>
    <type>Date</type>
</CustomField>