unpackaged/main/default/objects/Account/fields/ETST_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Account_Type__c</fullName>
    <label>Education Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government School</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
                <default>true</default>
                <label>Private School</label>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Nursery</fullName>
            </value>
            <value>
                <fullName>Chartered School</fullName>
            </value>
            <value>
                <fullName>Ajyal School</fullName>
            </value>
            <value>
                <fullName>Institute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>