unpackaged/main/default/objects/Account/fields/ETST_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_Contract_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>