unpackaged/main/default/objects/Account/fields/ETST_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coordinator Email</label>
    <type>Email</type>
</CustomField>