unpackaged/main/default/objects/Account/fields/ETST_Division__c.field-meta.xml
<CustomField>
    <fullName>ETST_Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division</label>
    <type>TextArea</type>
</CustomField>