unpackaged/main/default/objects/Account/fields/ETST_DOB__c.field-meta.xml
<CustomField>
    <fullName>ETST_DOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOB</label>
    <type>Date</type>
</CustomField>