unpackaged/main/default/objects/Account/fields/ETST_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>ETST_Emergency_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emergency Contact</label>
    <type>Phone</type>
</CustomField>