unpackaged/main/default/objects/Account/fields/ETST_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETST_Emirates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>