unpackaged/main/default/objects/Account/fields/ETST_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Employer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>