unpackaged/main/default/objects/Account/fields/ETST_Gender_AR__c.field-meta.xml
<CustomField>
    <fullName>ETST_Gender_AR__c</fullName>
    <label>Gender_AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ذكر</fullName>
            </value>
            <value>
                <fullName>انثى</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>