unpackaged/main/default/objects/Account/fields/ETST_Grade__c.field-meta.xml
<CustomField>
    <fullName>ETST_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grade</label>
    <type>TextArea</type>
</CustomField>