unpackaged/main/default/objects/Account/fields/ETST_Name_AR__c.field-meta.xml
<CustomField>
    <fullName>ETST_Name_AR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>