unpackaged/main/default/objects/Account/fields/ETST_Nationality__c.field-meta.xml
<CustomField>
    <fullName>ETST_Nationality__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>