unpackaged/main/default/objects/Account/fields/ETST_Parent_School_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_Parent_School_Id__c</fullName>
    <label>Parent School Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>