unpackaged/main/default/objects/Account/fields/ETST_RefID__c.field-meta.xml
<CustomField>
    <fullName>ETST_RefID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>