unpackaged/main/default/objects/Account/fields/ETST_RELATION_EN__c.field-meta.xml
<CustomField>
    <fullName>ETST_RELATION_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RELATION_EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>