unpackaged/main/default/objects/Account/fields/ETST_SchoolRefID__c.field-meta.xml
<CustomField>
    <fullName>ETST_SchoolRefID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SchoolRefID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>