unpackaged/main/default/objects/Account/fields/ETST_Street__c.field-meta.xml
<CustomField>
    <fullName>ETST_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>