unpackaged/main/default/objects/Account/fields/ETT_Auction_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Auction_Percentage__c</fullName>
    <label>Auction Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>