unpackaged/main/default/objects/Account/fields/ETT_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bank_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>