unpackaged/main/default/objects/Account/fields/ETT_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bank_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>