unpackaged/main/default/objects/Account/fields/ETT_Bank_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bank_Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Branch Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>