unpackaged/main/default/objects/Account/fields/ETT_Email__c.field-meta.xml
<CustomField>
    <fullName>ETT_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>