unpackaged/main/default/objects/Account/fields/ETT_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_ERP_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Reference number from ERP system</inlineHelpText>
    <label>ERP Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>