unpackaged/main/default/objects/Account/fields/ETT_IBAN__c.field-meta.xml
<CustomField>
    <fullName>ETT_IBAN__c</fullName>
    <label>IBAN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>