unpackaged/main/default/objects/Account/fields/ETT_Minimum_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETT_Minimum_Commission_Amount__c</fullName>
    <label>Minimum Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>