unpackaged/main/default/objects/Account/fields/ETT_P_O_Box__c.field-meta.xml
<CustomField>
    <fullName>ETT_P_O_Box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>P O Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>