unpackaged/main/default/objects/Account/fields/ETT_Party_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Party_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Party Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>