unpackaged/main/default/objects/Account/fields/ETT_Product_Service_Options__c.field-meta.xml
<CustomField>
    <fullName>ETT_Product_Service_Options__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product &amp; Service Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>