unpackaged/main/default/objects/Account/fields/ETT_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Reference_Number__c</fullName>
    <displayFormat>SUP-{00000}</displayFormat>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>