unpackaged/main/default/objects/Account/fields/ETT_Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Trade_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>