unpackaged/main/default/objects/Account/fields/ETT_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Type__c</fullName>
    <description>ET Tyre Supplier Types Company or Individual</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>