unpackaged/main/default/objects/Account/fields/ETT_VAT_TRN_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_VAT_TRN_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>