unpackaged/main/default/objects/Account/fields/GL_Zone__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>