unpackaged/main/default/objects/Account/fields/Government_School_Parent__c.field-meta.xml
<CustomField>
    <fullName>Government_School_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government School Parent</label>
    <type>Checkbox</type>
</CustomField>