unpackaged/main/default/objects/Account/fields/IsConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConvertedFromLead</label>
    <type>Checkbox</type>
</CustomField>