unpackaged/main/default/objects/Account/fields/No_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>