unpackaged/main/default/objects/Account/fields/Registration_Request__c.field-meta.xml
<CustomField>
    <fullName>Registration_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Request</label>
    <referenceTo>ET_Registration_Request__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>