unpackaged/main/default/objects/Account/fields/Salary_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Salary_Paid_Amount__c</fullName>
    <label>Salary Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>