unpackaged/main/default/objects/Account/fields/Salary_Paid_Amount_Adnoc__c.field-meta.xml
<CustomField>
    <fullName>Salary_Paid_Amount_Adnoc__c</fullName>
    <label>Salary Paid Amount Adnoc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>