unpackaged/main/default/objects/Account/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Station</label>
    <length>50</length>
    <type>Text</type>
</CustomField>