unpackaged/main/default/objects/Account/fields/Strategic_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>