unpackaged/main/default/objects/Account/fields/TR_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_Effective_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TR Effective End Date</label>
    <type>Date</type>
</CustomField>