unpackaged/main/default/objects/Account/recordTypes/Business_B2B_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Business_B2B_Inspection</fullName>
    <active>false</active>
    <label>Business(B2B)-Inspection</label>
</RecordType>