unpackaged/main/default/objects/Account/recordTypes/Business_School.recordType-meta.xml
<RecordType>
    <fullName>Business_School</fullName>
    <active>true</active>
    <label>Business (B2B) - School</label>
</RecordType>