unpackaged/main/default/objects/Account/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>false</active>
    <label>Employee</label>
</RecordType>