unpackaged/main/default/objects/Account/recordTypes/ETSALES_B2B_Account.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_B2B_Account</fullName>
    <active>true</active>
    <label>Organization</label>
</RecordType>