unpackaged/main/default/objects/Account/recordTypes/ETT_Customer.recordType-meta.xml
<RecordType>
    <fullName>ETT_Customer</fullName>
    <active>false</active>
    <label>Tyre Customer</label>
</RecordType>