unpackaged/main/default/objects/Account/recordTypes/ETT_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Supplier</fullName>
    <active>false</active>
    <label>Tyre Supplier</label>
</RecordType>