unpackaged/main/default/objects/Account/recordTypes/Inspection.recordType-meta.xml
<RecordType>
    <fullName>Inspection</fullName>
    <active>true</active>
    <label>Inspection</label>
</RecordType>