unpackaged/main/default/objects/Account/recordTypes/Insurance_Partner.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Partner</fullName>
    <active>false</active>
    <label>Insurance Partner</label>
</RecordType>