unpackaged/main/default/objects/Account/validationRules/Account_Name_Read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Read_only</fullName>
    <active>true</active>
    <description>Account Name field should be read only for ETS Zone Sales Managers</description>
    <errorConditionFormula>AND(
$Profile.Name = &quot;ETS_Zone_Sales Manager&quot;,
ISCHANGED(Name) 
)</errorConditionFormula>
    <errorMessage>Editing the Account Name is not allowed.</errorMessage>
</ValidationRule>