unpackaged/main/default/objects/Account/validationRules/Account_Related_Opportunity_New_Business.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Related_Opportunity_New_Business</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),  ISPICKVAL( ETSALES_Status__c, &quot;Closed Won&quot;) )</errorConditionFormula>
    <errorMessage>Don&#39;t allow to create new Opportunity</errorMessage>
</ValidationRule>