unpackaged/main/default/objects/Account/validationRules/Cannot_Insert_Negative_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Insert_Negative_Values</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 NumberOfEmployees &lt; 0,
 ETSALES_No_Of_Lost_Opportunity__c &lt; 0,
 ETSALES_No_Of_Won_Opportunity__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Number Of Employees, No Of Lost Opportunities or Number of Won Opportunities cannot be Negative.</errorMessage>
</ValidationRule>