unpackaged/main/default/objects/Account/validationRules/Check_Account_Duplicate_on_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Account_Duplicate_on_Creation</fullName>
    <active>false</active>
    <description>IsConvertedFromLead__c</description>
    <errorConditionFormula>IF( ( ISNEW() &amp;&amp; RecordType.Name == &#39;Organization&#39; &amp;&amp; (  $User.Id != &#39;0053z00000CWCwP&#39;) ) &amp;&amp; IsConvertedFromLead__c==false, true, false)</errorConditionFormula>
    <errorDisplayField>ETST_Academic_Year_End_Date__c</errorDisplayField>
    <errorMessage>The account can not be created without lead conversion.</errorMessage>
</ValidationRule>