unpackaged/main/default/objects/Account/validationRules/Create_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
NOT(IsLeadConverted__c),
ISNEW(),
OR( $Profile.Name == &quot;ETS_Zone_Sales Head&quot; , $Profile.Name == &quot;ETS_Zone_Sales Manager&quot; , $Profile.Name ==&quot;ETS_Zone_ Sales Support&quot;))</errorConditionFormula>
    <errorMessage>You do not have permission to Create Account</errorMessage>
</ValidationRule>