unpackaged/main/default/objects/Account/validationRules/ETIN_EIDApplicationNum_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_EIDApplicationNum_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( ETIN_EID_Application_No__c )),
NOT(REGEX(ETIN_EID_Application_No__c , &quot;^[0-9.]+$&quot;))

)</errorConditionFormula>
    <errorDisplayField>ETIN_EID_Application_No__c</errorDisplayField>
    <errorMessage>Please enter only numbers</errorMessage>
</ValidationRule>