unpackaged/main/default/objects/Account/validationRules/ETIN_employeeID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_employeeID_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(ETIN_Employee_Id__c )),
NOT(REGEX(ETIN_Employee_Id__c  , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETIN_Employee_Id__c</errorDisplayField>
    <errorMessage>Please enter only numbers</errorMessage>
</ValidationRule>