unpackaged/main/default/objects/Account/validationRules/ETIN_GrossSalary_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_GrossSalary_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(ETIN_Gross_Salary__c)),
NOT(REGEX( TEXT(ETIN_Gross_Salary__c) , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETIN_Gross_Salary__c</errorDisplayField>
    <errorMessage>Enter valid value</errorMessage>
</ValidationRule>