unpackaged/main/default/objects/Account/validationRules/ETIN_Passport_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_Passport_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( ETIN_Passport_Number__c )),
NOT(REGEX( ETIN_Passport_Number__c , &quot;^[0-9A-Za-z]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETIN_Passport_Number__c</errorDisplayField>
    <errorMessage>Please enter only valid characters</errorMessage>
</ValidationRule>