unpackaged/main/default/objects/Account/validationRules/ETIN_Sponsor_UID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_Sponsor_UID_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( ETIN_Sponsor_UID__c )),
NOT(REGEX(ETIN_Sponsor_UID__c , &quot;^[0-9.]+$&quot;))

)</errorConditionFormula>
    <errorDisplayField>ETIN_Sponsor_UID__c</errorDisplayField>
    <errorMessage>Please enter only numbers</errorMessage>
</ValidationRule>