unpackaged/main/default/objects/Account/validationRules/ETIN_SponsorType_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_SponsorType_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( ETIN_Sponsor_UID_Type__c )),
NOT(REGEX( ETIN_Sponsor_UID_Type__c , &quot;^[0-9A-Za-z]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETIN_Sponsor_UID_Type__c</errorDisplayField>
    <errorMessage>Please enter valid characters</errorMessage>
</ValidationRule>