unpackaged/main/default/objects/Account/validationRules/ETIN_VisaUnified_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_VisaUnified_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(ETIN_Visa_Unified_Number__c )),
NOT(REGEX(ETIN_Visa_Unified_Number__c , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ETIN_Visa_Unified_Number__c</errorDisplayField>
    <errorMessage>Please enter only numbers</errorMessage>
</ValidationRule>